--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,15 @@ repositories {
 		// for fabric
 		url = "https://maven.modmuss50.me/"
 	}
+//	maven {
+//		// for mod menu
+//		url = "https://maven.terraformersmc.com/"
+//	}
 	maven {
-		// for mod menu
-		url = uri("https://jitpack.io")
+		// backup for mod menu
+		url = "https://maven.kotlindiscord.com/repository/terraformers/"
 	}
+
 	maven {
 		// for cloth-config
 		url = "https://maven.shedaniel.me/"
@@ -38,8 +43,9 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	modImplementation "io.github.prospector:modmenu:${project.mod_menu_version}"
-
+	modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
 	modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
