--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,6 @@ maven_group 			= hunternif.mc.atlas
 archives_base_name 		= antiqueatlas
 
 # Dependencies
-cloth_config_version	= 4.11.26
+cloth_config_version	= 5.0.34
 fabric_version			= 0.37.0+1.17
-mod_menu_version		= 1.16.9
+modmenu_version		    = 2.0.2
